# anthropic-news-mcp

./: .codecov.yml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  How to Connect to Claude-ChatGPT.md  How to make a good MCP.md  README.md  mypy.ini  pyproject.toml  renovate.json  ruff.toml  vulture_whitelist.py
.claude/agents/: quality-gate-runner.md  source-implementer.md
.claude/commands/: add-source.md  debug-source.md  verify.md
.claude/rules/: cache-and-schema.md  feature-flags.md  fetchers.md  mcp-tools.md  tests.md
.claude/skills/: add-source.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: alert.yml  ci.yml  deploy-docs.yml  eval.yml  labels.yml  pr-review.yml  release.yml  security.yml
docs/: dashboards.md  schema.json
docs/api/: anthropic_news_mcp.html  index.html  search.js
docs/api/anthropic_news_mcp/: asgi.html  audit.html  cache.html  config.html  content.html  fetchers.html  flags.html  http.html  metrics.html  models.html  remote.html  research.html  retrieval.html  sentry.html  server.html
docs/api/anthropic_news_mcp/fetchers/: base.html  docs_api.html  docs_claude_code.html  github_events.html  github_issues.html  github_releases.html  hackernews.html  newsroom.html  official.html  reddit.html
docs/runbooks/: cache-reset.md  sentry-setup.md  source-failure.md
droid-wiki/: .wiki-meta.json  agent-readiness-report.md  by-the-numbers.md  deployment.md  fun-facts.md  lore.md  security.md
droid-wiki/api/: index.md  prompts.md  resources.md  tools.md
droid-wiki/apps/: audit-cli.md  index.md  mcp-server.md  remote-asgi.md
droid-wiki/background/: design-decisions.md  index.md
droid-wiki/how-to-contribute/: debugging.md  development-workflow.md  index.md  patterns-and-conventions.md  testing.md  tooling.md
droid-wiki/overview/: architecture.md  getting-started.md  glossary.md  index.md
droid-wiki/primitives/: evidence.md  index.md  news-item.md  source-config.md
droid-wiki/reference/: configuration.md  data-models.md  dependencies.md  index.md
droid-wiki/sources/: community.md  docs.md  github.md  index.md  official.md
droid-wiki/systems/: cache.md  content.md  fetchers.md  index.md  research.md  retrieval.md
evals/: README.md  golden.yaml  offline_cases.yaml  rubric.md  run_eval.py  run_offline_eval.py  seed.py
scripts/: check_flags.py  generate_docs.sh  validate_agents_md.py
src/anthropic_news_mcp/: analytics.py  asgi.py  audit.py  cache.py  config.py  content.py  flags.py  http.py  metrics.py  models.py  remote.py  research.py  retrieval.py  sentry.py  server.py
src/anthropic_news_mcp/fetchers/: base.py  docs_api.py  docs_claude_code.py  github_events.py  github_issues.py  github_releases.py  hackernews.py  newsroom.py  official.py  reddit.py
tests/: test_analytics.py  test_audit.py  test_cache.py  test_content.py  test_eval_harness.py  test_http.py  test_remote.py  test_research.py  test_retrieval.py  test_server.py
tests/fixtures/: docs_api.html  docs_claude_apps.html  docs_claude_code.html  docs_system_prompts.html  engineering.html  github_events.json  github_events_synthetic.json  github_releases.json  hackernews.json  newsroom.html  newsroom_filters.html  reddit_anthropic.json  reddit_claudeai.json  research.html  status_incidents.json  status_operational.json  status_scheduled.json  support_release_notes.html
tests/test_fetchers/: test_community.py  test_docs.py  test_github.py  test_newsroom.py  test_official.py
