[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anthropic-news-mcp"
version = "0.1.0"
description = "MCP server aggregating Anthropic news, model releases, and community signals"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27",
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
eval = ["anthropic>=0.40.0", "PyYAML>=6.0.0"]
remote = [
    "PyJWT[crypto]>=2.8.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "PyYAML>=6.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
anthropic-news-mcp = "anthropic_news_mcp.server:main"
anthropic-news-audit = "anthropic_news_mcp.audit:main"

[project.urls]
Homepage = "https://github.com/KeigoShimadaCC/anthropic-news-mcp"
Repository = "https://github.com/KeigoShimadaCC/anthropic-news-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/anthropic_news_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
